update text, fix capitalization

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
           </a>
         </div>
-        <p>In a past life, I was a Special Education teacher. Inspired by projects like <a target="_blank" href="https://www.ted.com/talks/sugata_mitra_build_a_school_in_the_cloud?language=en" target="_blank">Sugata Mitra’s “Hole in the Wall” experiment</a>, the endless opportunities to make people’s lives easier with technology drove me pursue a full time career in software development. I have spent the past year doing just that.<br /> <br  />As a developer, I have an affinity for clean readable code, finding logical solutions to difficult problems, and creating an enjoyable user experience. When I’m not glued to my keyboard, you might find me café crawling around Capitol Hill, exploring the nearby  hiking trails, or making a fool of myself at a local improv class.</p>
+        <p>In a past life, I was a Special Education teacher. Inspired by projects like <a target="_blank" href="https://www.ted.com/talks/sugata_mitra_build_a_school_in_the_cloud?language=en" target="_blank">Sugata Mitra’s “Hole in the Wall” experiment</a>, the endless opportunities to make people’s lives easier with technology drove me pursue a full time career in software development. I have spent the past year doing just that.<br /> <br  />As a developer, I have an affinity for clean readable code, finding logical solutions to difficult problems, and creating an enjoyable user experience. When I’m not glued to my keyboard, you might find me café crawling around Capitol Hill, exploring the nearby  hiking trails, or making a fool of myself at an improv class.</p>
       </div>
 
     </div>
@@ -98,7 +98,7 @@
   <i class="fa fa-square-o fa-stack-2x"></i>
   <i class="fa fa-child fa-stack-1x"></i>
 </span>
-          <h3>A teacher</h3>
+          <h3>A Teacher</h3>
           <p class="text-justify">The years I spent teaching math and reading to students with special needs were just as amazing as they were challenging. My students' struggles with technology taught me the importance of accessibility and creating an intuitive user experience. Teaching allowed me to use instructional data and educational technology to facilitate meaningful learning and help my students achieve their goals.</p>
         </div>
         <div class="col-md-3 col-md-offset-1 block">
@@ -107,7 +107,7 @@
   <i class="fa fa-gears fa-stack-1x"></i>
 </span>
           <h3>A Student</h3>
-          <p class="text-justify"><a target="_blank" href="http://adadevelopersacademy.org/">Ada Developers Academy</a> is a highly selective,  full stack development program for women and non-binary people emphasizing rapid learning, collaboration, and leadership. At Ada, I learned CS Fundamentals, Ruby, Rails, JavaScript, jQuery, and Backbone.js while using Object Oriented Programming techniques and Test Driven Development to develop projects both individually and in small groups.</p>
+          <p class="text-justify"><a target="_blank" href="http://adadevelopersacademy.org/">Ada Developers Academy</a> is a highly selective,  full-stack training program for women and non-binary people emphasizing rapid learning, collaboration, and leadership. While at Ada, I learned Ruby, Rails, JavaScript, jQuery, and Backbone.js to develop projects both individually and in small groups. I also had the opportunity to study Object Oriented Programming (OOP), Test Driven Development (TDD), data structures, and algorithms.</p>
         </div>
         <div class="col-md-3 col-md-offset-1 block">
           <span class="fa-stack fa-5x">
