--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Custom Fonts -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+   <!-- <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet"> -->
 
    <link rel="shortcut icon" type="image/png" href="rice-plant/favicon.ico"/>
 
